myproject/modules/security_group/securitygroup.tf
# Create security group
resource "aws_security_group" "my_security_group" {
   #By using output variables we have access to the vpc ID
  vpc_id = module.network.vpc_id
  
  name        = "my-security-group"
  description = "Allow SSH and HTTP traffic"
  
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
